--- a/EmployeeSQL/bonus.ipynb
+++ b/EmployeeSQL/bonus.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -51,12 +51,11 @@
      "name": "stdout",
      "text": [
       "Collecting psycopg2\n",
-      "  Downloading psycopg2-2.8.6.tar.gz (383 kB)\n",
-      "\u001b[K     |████████████████████████████████| 383 kB 5.3 MB/s \n",
-      "\u001b[?25hBuilding wheels for collected packages: psycopg2\n",
+      "  Using cached psycopg2-2.8.6.tar.gz (383 kB)\n",
+      "Building wheels for collected packages: psycopg2\n",
       "  Building wheel for psycopg2 (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for psycopg2: filename=psycopg2-2.8.6-cp36-cp36m-macosx_10_9_x86_64.whl size=135469 sha256=a5516a2ce37892757b7b11d5185aebb25e39f2a28409a6f665d53000734cf6c0\n",
-      "  Stored in directory: /Users/annabelcheong/Library/Caches/pip/wheels/cb/74/1b/4b65077db4eb0d85763050e60c5921398d2858945558352dd8\n",
+      "\u001b[?25h  Created wheel for psycopg2: filename=psycopg2-2.8.6-cp38-cp38-macosx_10_9_x86_64.whl size=136171 sha256=d9bd73a696889f28eb5a46926ac3cc1594f1d252a7dfc51bbb97a15e7b49001e\n",
+      "  Stored in directory: /Users/annabelcheong/Library/Caches/pip/wheels/70/5e/69/8a020d78c09043156a7df0b64529e460fbd922ca065c4b795c\n",
       "Successfully built psycopg2\n",
       "Installing collected packages: psycopg2\n",
       "Successfully installed psycopg2-2.8.6\n"
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +92,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 3
     }
    ],
    "source": [
@@ -105,14 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "emp_no\nsalary\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-78bc4bb5e019>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0memp_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mengine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * FROM salaries\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mrecord\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
      ]
     }
    ],
@@ -136,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +166,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>emp_no</th>\n      <th>salary</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>300024.000000</td>\n      <td>300024.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>253321.763392</td>\n      <td>52970.732451</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>161828.235540</td>\n      <td>14301.478491</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>10001.000000</td>\n      <td>40000.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>85006.750000</td>\n      <td>40000.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>249987.500000</td>\n      <td>48681.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>424993.250000</td>\n      <td>61758.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>499999.000000</td>\n      <td>129492.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 39
+     "execution_count": 7
     }
    ],
    "source": [
@@ -177,20 +180,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "You have to supply one of 'by' and 'level'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-40-a625d3299e7f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Salary max is just under 130,000.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msalaries_gb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msalaries_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mgroupby\u001b[0;34m(self, by, axis, level, as_index, sort, group_keys, squeeze, observed)\u001b[0m\n\u001b[1;32m   5796\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5797\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlevel\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mby\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5798\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You have to supply one of 'by' and 'level'\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5799\u001b[0m         \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5800\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: You have to supply one of 'by' and 'level'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   emp_no  salary\n",
+       "0   10001   60117\n",
+       "1   10002   65828\n",
+       "2   10003   40006\n",
+       "3   10004   40054\n",
+       "4   10005   78228"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>emp_no</th>\n      <th>salary</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10001</td>\n      <td>60117</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>10002</td>\n      <td>65828</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>10003</td>\n      <td>40006</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>10004</td>\n      <td>40054</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>10005</td>\n      <td>78228</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "salaries_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                 emp_no  salary\n",
+       "Salary Category                \n",
+       "<$32k                 0       0\n",
+       "$32-64k          235138  235138\n",
+       "64-96k            62551   62551\n",
+       "96-128k            2334    2334"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>emp_no</th>\n      <th>salary</th>\n    </tr>\n    <tr>\n      <th>Salary Category</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>&lt;$32k</th>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>$32-64k</th>\n      <td>235138</td>\n      <td>235138</td>\n    </tr>\n    <tr>\n      <th>64-96k</th>\n      <td>62551</td>\n      <td>62551</td>\n    </tr>\n    <tr>\n      <th>96-128k</th>\n      <td>2334</td>\n      <td>2334</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 14
     }
    ],
    "source": [
@@ -199,10 +232,19 @@
     "#Create 4 bins \n",
     "#Range of bin = 130,000/4=32,000\n",
     "bins=[0,32000,64000,96000,128000]\n",
-    "groups=salaries.groupby(pd.cut)\n",
     "\n",
+    "#Create group names\n",
+    "group_names=[\"<$32k\",\"$32-64k\",\"64-96k\",\"96-128k\"]\n",
     "\n",
-    "salaries_gb=salaries_df.groupby()"
+    "#Create new column with bin categories\n",
+    "#Note: closed=left indicates the start value of range(left) is included but the right value of range(right) is not included.\n",
+    "salaries_df[\"Salary Category\"]=pd.cut(salaries_df[\"salary\"], bins=bins, right=True, include_lowest=True, labels=group_names)\n",
+    "salaries_df\n",
+    "\n",
+    "#Count emp_no by Salary Category grouping\n",
+    "salaries_gp_df=salaries_df.groupby([\"Salary Category\"])\n",
+    "salaries_gp_df=salaries_gp_df.count()\n",
+    "salaries_gp_df"
    ]
   },
   {
